<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout_Match_Wrap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btn"
            style="@style/MerriweatherTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="change font" />

        <TextView
            style="@style/MaliTextStyle"
            android:text="@string/title"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            style="@style/MaliTextStyle"
            android:layout_marginTop="20dp"
            android:text="@string/text1"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            style="@style/MaliTextStyle"
            android:layout_marginTop="20dp"
            android:text="@string/text2"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            style="@style/MerriweatherTextStyle"
            android:layout_marginTop="20dp"
            android:text="@string/title_merriweather"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            style="@style/MerriweatherTextStyle"
            android:layout_marginTop="20dp"
            android:text="@string/text3"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            style="@style/MerriweatherTextStyle"
            android:layout_marginTop="20dp"
            android:text="@string/text4"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            style="@style/ChineseTextStyle"
            android:layout_marginTop="20dp"
            android:text="苹方中文字体测试苹方中文字体测试苹方中文字体测试苹方中文字体测试苹方中文字体测试苹方中文字体测试 - normal"
            android:textSize="15sp" />

        <TextView
            style="@style/ChineseTextStyle"
            android:layout_marginTop="20dp"
            android:text="苹方中文字体测试苹方中文字体测试苹方中文字体测试苹方中文字体测试苹方中文字体测试苹方中文字体测试 - italic"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            style="@style/ChineseTextStyle"
            android:layout_marginTop="20dp"
            android:text="苹方中文字体测试苹方中文字体测试苹方中文字体测试苹方中文字体测试苹方中文字体测试苹方中文字体测试 - bold"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            style="@style/ChineseMFWTextStyle"
            android:layout_marginTop="20dp"
            android:text="马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试 - normal"
            android:textSize="15sp" />

        <TextView
            style="@style/ChineseMFWTextStyle"
            android:layout_marginTop="20dp"
            android:text="马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试 - italic"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            style="@style/ChineseTextStyle"
            android:layout_marginTop="20dp"
            android:text="马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试马蜂窝中文字体测试 - bold"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            style="@style/Layout_Wrap_Wrap"
            android:layout_marginTop="20dp"
            android:text="中文字体测试中文字体测试中文字体测试中文字体测试中文字体测试中文字体测试中文字体测试  未使用字体 - normal"
            android:textSize="15sp" />

        <TextView
            style="@style/Layout_Wrap_Wrap"
            android:layout_marginTop="20dp"
            android:text="中文字体测试中文字体测试中文字体测试中文字体测试中文字体测试中文字体测试中文字体测试 未使用字体 - italic"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            style="@style/Layout_Wrap_Wrap"
            android:layout_marginTop="20dp"
            android:text="中文字体测试中文字体测试中文字体测试中文字体测试中文字体测试中文字体测试中文字体测试 未使用字体 - bold"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>